src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Vessel_Email__c</fullName>
        <formula>Account.Vessel_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Vessel Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_ID_18_Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset ID - 18 Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <externalId>true</externalId>
        <label>Asset ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Removed__c</fullName>
        <label>Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_By__c</fullName>
        <label>Installed By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Family__c</fullName>
        <label>Item Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Notes__c</fullName>
        <label>Item Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mfg_Date__c</fullName>
        <inlineHelpText>This is the Manufacturing Date / date that we stocked the device or unit.</inlineHelpText>
        <label>Mfg. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Customer_Name__c</fullName>
        <label>Original Customer Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Customer_Number__c</fullName>
        <label>Original Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Asset_Description__c</fullName>
        <formula>Parent.Item_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Asset Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Asset_Serial_No__c</fullName>
        <formula>Parent.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Asset Serial No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Detail__c</fullName>
        <formula>Text( Account.Platform_Detail__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <formula>Text ( Account.Industry_Designation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Account__c</fullName>
        <label>Previous Account</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT( Product2.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_No__c</fullName>
        <label>Revision No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>This field is used by the BaaN --&gt; Salesforce integration program, as well as when Assets are entered directly into SF. It&apos;s primary function is to serve as a sorting mechanism. Sequence No is typically incremented by 10 to allow for Assets to be inserted in-between.</description>
        <label>Sequence No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOD_Product_Sub_Type__c</fullName>
        <formula>TEXT(Product2.VOD_Product_Sub_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VOD Product Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOD_Product_Type__c</fullName>
        <formula>TEXT(Product2.VOD_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VOD Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOD_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VOD Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets(VOD Supplier)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.PARENT</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>